kafka/statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  serviceName: kafka-service
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:5.5.1
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 10Mi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  rules:
    - host: kafka.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kafka-service
              servicePort: 9092
  ingressClassName: traefik
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  hosts:
    - kafka.example.com
  http:
    - route:
        - destination:
            host: kafka-service
            port:
              number: 9092
